--- a/fundamentos/bloco-3-intrucao-a-htmle-css/dia-3-html-css-seletores-e-posicionamento/style.css
+++ b/fundamentos/bloco-3-intrucao-a-htmle-css/dia-3-html-css-seletores-e-posicionamento/style.css
@@ -1,27 +1,38 @@
-.caixa {
-    color: white;
-    display: inline-block;
-    line-height: 50px;
-    text-align: center;
-    vertical-align: top;
-  }
+.super-mario {
+  width: 120px;
+  position: absolute;
+    z-index: 1;
+  left: 400px;
   
-  .width-and-height {
-    height: 50px;
-    width: 50px;
-  }
-  
-  /* insira na classe abaixo um padding de 20px para aplicá-lo aos itens B, C e D */
-  .padding { 
-  padding: 20px;
-  }
-  
-  /* insira na classe abaixo uma margem de 30px para aplicá-la aos itens C e D */
-  .margin {
-  margin: 30px;
-  }
-  
-  /* insira na classe abaixo uma borda com valor '5px solid black' para aplicá-la ao item D */
-  .border {
-    border: '5px solid black';
-  }
+}
+
+.goomba {
+  width: 100px;
+  position: absolute;
+  z-index: 2;
+  top: 380px;
+  left: 400px;
+}
+
+.baloon {
+  position: absolute;
+  z-index: 3;
+  right: 300px;
+}
+
+.speech {
+  font-size: 25px;
+  position: absolute;
+  z-index: 4;
+  top: 130px;
+  right: 350px;
+}
+
+.bowser {
+  width: 200px;
+  position: absolute;
+  z-index: 5;
+  top: 200px;
+  right: 100px;
+}
+
