Site do camarão finalizado

--- a/fundamentos/bloco-3-intrucao-a-htmle-css/dia-4-introducao-a-html-e-css/style.css
+++ b/fundamentos/bloco-3-intrucao-a-htmle-css/dia-4-introducao-a-html-e-css/style.css
@@ -14,6 +14,7 @@ body {
     text-align: center;
     color: aqua;
     margin: 10px 10px 10px 500px;
+    background-size: 50;
 }
 
 nav {
@@ -23,7 +24,8 @@ nav {
     margin-top: 20px;
     margin-bottom: 20px;
     width: 50%;
-    text-align: center
+    text-align: center;
+    
 }
 nav li {
     display: inline;
@@ -32,14 +34,17 @@ nav li {
 
 nav a {
     color: aliceblue;
-    
+    display: inline;
     text-size-adjust: ;
     margin: 120px;
+    overflow: auto  ;
 }
 
 article {
     background-color: rgb(1, 139, 93);
     margin: 20px;
+    display: inline-block;
+    width: 75%;
 }
 
 section {
@@ -57,17 +62,109 @@ h4 {
     text-align: right;
     margin: 10px;
 }
- 
+
+.general-info {
+    width: 100%px;
+    height: 450px;
+    }
+.general-info img {
+    float: right;
+    width: 50%;
+    height: 100%;
+    display: inline-block;
+}
+
+.general-info-text {
+    float: right;
+     color: rgb(0, 0, 0);
+     display: inline-block;
+     width: 49%;
+     margin: 1px;   
+     margin-top: 70px;
+     margin-bottom: 10px;
+ }
+
+
 .punch {
     width: 100%px;
     height: 450px;
-}
+    }
+
 .punch img {
     float: left;
     width: 50%;
     height: 100%;
+    display: inline-block;
+
 }
 
 .punch-text {
    float: right;
+    color: rgb(0, 0, 0);
+    display: inline-block;
+    width: 49%;
+    margin: 1px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+}
+
+.name {
+    width: 97,7%;
+    height: 450px;
+    }
+
+.name img {
+    float: right;
+    border: 20px solid  white;
+    width: calc(50% - 40px);
+    height: calc(100% - 40px);
+ }
+
+.name-text {
+   float: leftt;
+    color: rgb(0, 0, 0);
+    display: inline-block;
+    width: 49%;
+    margin: 1px;
+    margin-top: 70px;
+    margin-bottom: 10px;
+}
+
+aside {
+    background-color: rgb(1, 139, 93);
+    display: inline-block;
+    width: 19%;
+    margin: 20px 20px 20px 0px;
+    height: 100%;
+    position: relative;
+    bottom: 990px;
+}
+
+.extra-video {
+    background-color: aquamarine;
+    padding: 20px;
+    
+}
+.extra-video h3 {
+    text-decoration: underline;
+    text-align: center;
+    line-height: 40px;
+}
+aside a {
+    color: rgb(1, 139, 93);
+    
+}
+.extra-video a :hover {
+    color: rgb(0, 0, 0);
+}
+.extra-video p {
+    line-height: 20px;
+}
+
+table {
+    background-color: aquamarine;
+    width: 100%;
+}
+table h4 {
+    text-align: left;
 }
