--- a/fundamentos/bloco-5/dia-2-JavaScript-Trabalhando-com-elementos/style.css
+++ b/fundamentos/bloco-5/dia-2-JavaScript-Trabalhando-com-elementos/style.css
@@ -1,9 +1,9 @@
 .rigth-content {
-    margin-right: auto;
+    background-color: brown;
 }
 
 .center-content {
     background-color: green;
-    
+
 }
 
