estilização no css

--- a/fundamentos/bloco-5/dia-2-JavaScript-Trabalhando-com-elementos/style.css
+++ b/fundamentos/bloco-5/dia-2-JavaScript-Trabalhando-com-elementos/style.css
@@ -1,9 +1,8 @@
 .rigth-content {
-    background-color: brown;
+  margin-right: auto;
 }
 
-.center-content {
-    background-color: green;
-
+.main-content {
+    background-color: lightgreen;
 }
 
