--- a/fundamentos/bloco-6/dia-1-HTML-CSS-Forms/style.css
+++ b/fundamentos/bloco-6/dia-1-HTML-CSS-Forms/style.css
@@ -29,6 +29,7 @@ body {
     color: white;
     background-color:#036b52 ;
     border-radius: 5px;
+    text-align: center;
   }
 
   .form-row {
@@ -43,7 +44,7 @@ body {
     margin: auto;
   }
 
-  .form-row input[type="text"], .form-row input[type="email"] {
+  .form-row input[type="text"], .form-row input[type="email"]{
     border-radius: 5px;
     color: #29313d;
     background-color: rgb(221, 221, 221);
@@ -73,3 +74,25 @@ fieldset label {
     margin: 0px;
 }
 
+.form-row textarea {
+  border-radius: 5px;
+  color: #29313d;
+  background-color: rgb(221, 221, 221);
+  width: 100%;
+  padding: 7px;
+  height: 130px;
+}
+
+.form-row input[type="date"] {
+  border-radius: 5px;
+  color: #29313d;
+  background-color: rgb(221, 221, 221);
+  width: 30%;
+  padding: 7px;
+}
+
+.trip-form button {
+  margin: 10px;
+  padding: 10px;
+  width: 40%;
+}
