--- a/fundamentos/bloco-6/dia-1-HTML-CSS-Forms/style.css
+++ b/fundamentos/bloco-6/dia-1-HTML-CSS-Forms/style.css
@@ -96,3 +96,17 @@ fieldset label {
   padding: 10px;
   width: 40%;
 }
+
+.form-row input[type="checkbox"] {
+  border-radius: 5px;
+  color: #29313d;
+  background-color: rgb(221, 221, 221);
+  padding: 7px;
+  margin-right: 10px;
+}
+
+#news-checkbox, #img-checkbox {
+  font-size: 12px;
+  text-align: left;
+  color: rgba(221, 221, 221, 0.836);;
+}
