--- a/front-end/secao-7/dia-4-actions-assincronas/exercise-game-of-thunks/src/App.css
+++ b/front-end/secao-7/dia-4-actions-assincronas/exercise-game-of-thunks/src/App.css
@@ -1,38 +1,34 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100%;
+ 
 }
 
-.App-link {
-  color: #61dafb;
+header {
+  color: #7f7f7f;
+  width: 100%;
+  background-color: #010101;
+  margin-bottom: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  width: 50%;
+  max-width: 80%;
+  text-align: left;
+}
+
+form {
+  margin-bottom: 40px;
+}
+
+.btn {
+  background-color: #3a3636;
+  border: #010101;
+}
+
+.btn:hover {
+  background-color: #010101;
 }
